--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,25 +3,37 @@
 body {
   font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
   overflow-x: hidden;
-  color: #000;
   font-size: 16px;
 }
 
 a {
   text-decoration: none;
-  color: inherit;
   transition: opacity .2s ease;
 }
 
 a:hover {
   transition: opacity .2s ease;
   opacity: .5;
-  text-decoration-color: inherit;
 }
 ul {
   list-style: none;
   margin: 0;
 }
+
+.button {
+  isolation: isolate;
+  cursor: pointer;
+}
+
+.darkmode--activated .logo {
+  mix-blend-mode: difference;
+  color: #f2f2f2;
+}
+
+.darkmode-toggle {
+  z-index: 5000;
+}
+
 
 //TYPOGRAPHY-------------------------------------
 
