--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,19 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 
 body {
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
   overflow-x: hidden;
-  font-size: 16px;
 }
 
 a {
+  color: black;
   text-decoration: none;
   transition: opacity .2s ease;
-}
-
-a:hover {
-  transition: opacity .2s ease;
-  opacity: .5;
+  &:hover {
+    color: black;
+    transition: opacity .2s ease;
+    opacity: .5;
+  }
 }
 ul {
   list-style: none;
@@ -25,9 +23,20 @@ ul {
   cursor: pointer;
 }
 
-.darkmode--activated .logo {
-  mix-blend-mode: difference;
-  color: #f2f2f2;
+.darkmode--activated {
+  .logo {
+    mix-blend-mode: difference;
+    color: #f2f2f2 !important;
+  }
+
+  a {
+    color: #f2f2f2 !important;
+  }
+
+  a:hover {
+    color: #f2f2f2 !important;
+  }
+  
 }
 
 .darkmode-toggle {
@@ -36,10 +45,6 @@ ul {
 
 
 //TYPOGRAPHY-------------------------------------
-
-h1, h2, h3, h4, h5, h6, p {
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
-}
 
 h1, h2 {
   font-weight: 500;
@@ -58,11 +63,9 @@ h2 {
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   letter-spacing: -.5px;
   line-height: 1.1875;
-  color: #A0A0A0;
-  font-weight: normal;
 }
 
 p {
@@ -72,25 +75,6 @@ p {
 }
 
 @media (min-width: 1280px) {
-
-  h1 {
-    font-size: 2rem;
-    letter-spacing: -1px;
-    line-height: 1.1875;
-  }
-  
-  h2 {
-    font-size: 1.5rem;
-    letter-spacing: -.75px;
-    line-height: 1.1667;
-  }
-  
-  h3 {
-    letter-spacing: -.5px;
-    line-height: 1.1875;
-    color: #A0A0A0;
-    font-weight: normal;
-  }
 
   p {
     line-height: 1.4375;
