refactor: 💡 Better dark mode
This commit includes * Better dark mode * Some small cleanup

BREAKING CHANGE: 🧨 Firefox not supported

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -30,6 +30,7 @@ body {
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
   overflow-x: hidden;
+  background-color: white;
 }
 
 article,
