--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,18 +1,23 @@
-
-body {
-  overflow-x: hidden;
-}
-
 a {
   color: black;
   text-decoration: none;
   transition: opacity .2s ease;
+  -webkit-transition: opacity .2s ease;
+  -moz-transition: opacity .2s ease;
+  -ms-transition: opacity .2s ease;
+  -o-transition: opacity .2s ease;
+
   &:hover {
     color: black;
     transition: opacity .2s ease;
+    -webkit-transition: opacity .2s ease;
+    -moz-transition: opacity .2s ease;
+    -ms-transition: opacity .2s ease;
+    -o-transition: opacity .2s ease;
     opacity: .5;
   }
 }
+
 ul {
   list-style: none;
   margin: 0;
@@ -23,16 +28,19 @@ ul {
   cursor: pointer;
 }
 
-.darkmode--activated {
+.dark-mode {
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
 
-  a {
-    color: #f2f2f2 !important;
+  img, picture, video {
+    filter: invert(1);
+    -webkit-filter: invert(1);
   }
 
-}
-
-.darkmode-toggle {
-  z-index: 5000;
+  svg {
+    filter: invert(0);
+    -webkit-filter: invert(0);
+  }
 }
 
 
