style: 💄 homepage redesign

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -74,6 +74,11 @@ p {
   line-height: 1.5;
 }
 
+.brand-icon {
+  margin: 0 10px;
+  font-size: xx-large;
+}
+
 @media (min-width: 1280px) {
 
   p {
